--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,175 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  </body>
+  <title>Кэт энерджи</title>
+
+</head>
+
+<body style="max-width: 320px; margin: 0 auto">
+  <header class="header">
+    <div class="header__wrapper">
+      <a class="header__logo logo">
+        <img class="logo__image" src="https://via.placeholder.com/33x38.png" alt="Логотип Кэт энерджи">
+        <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Показать меню</button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="programm.html">Подбор программы</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <h1 class="visually-hidden">Магазин правильного питания для вашего любимца "Кэт Енерджи"</h1>
+
+    <section class="cat-action">
+      <h2 class="cat-action__title">Функциональное питание для котов</h2>
+      <p class="cat-action__description">Занялся собой? Займись котом!</p>
+      <a class="cat-action__link" href="programm.html">Подобрать программу</a>
+    </section>
+
+    <section class="categories">
+      <h2 class="visually-hidden">Программы питания</h2>
+      <ul class="categories__list">
+        <li class="categories__item">
+          <span class="categories__icon"></span>
+          <h3 class="categories__title">Похудение</h3>
+          <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="categories__link" href="catalog.html">
+            <span class="categories__link-text">Каталог Slim</span>
+            <span class="categories__link-icon"></span>
+          </a>
+        </li>
+        <li class="categories__item">
+          <span class="categories__icon"></span>
+          <h3 class="categories__title">Набор Массы</h3>
+          <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+            Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="categories__link" href="catalog.html">
+            <span class="categories__link-text">Каталог Pro</span>
+            <span class="categories__link-icon"></span>
+          </a>
+        </li>
+        <li class="categories__item"></li>
+      </ul>
+    </section>
+
+    <section class="advantages">
+      <h2 class="advantages__title">Как это работает</h2>
+      <ul class="advatages__list">
+        <li class="advantages__item">
+          <span class="advantages__icon advantages__icon--leaf"></span>
+          <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="advantages__item">
+          <span class="advantages__icon advantages__icon--water"></span>
+          <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </p>
+        </li>
+        <li class="advantages__item">
+          <span class="advantages__icon advantages__icon--meal"></span>
+          <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="advantages__item">
+          <span class="advantages__icon advantages__icon--clock"></span>
+          <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Как это работает</h2>
+      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+        Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+        часов в день. </p>
+      <div class="example__wrapper">
+        <ul class="example__info-list">
+          <li class="example__info-item">
+            <span class="example__info-value">5 кг</span>
+            <span class="example__info-label">снижение веса</span>
+          </li>
+          <li class="example__info-item">
+            <span class="example__info-value">60 дней</span>
+            <span class="example__info-label">затрачено времени</span>
+          </li>
+        </ul>
+        <p class="example__price">Затраты на питание:15 000 руб.</p>
+      </div>
+      <div class="example__wrapper example__wrapper--images">
+        <div class="example__image example__image--before">
+          <img src="https://via.placeholder.com/101x18.png" alt="Толстый кот">
+        </div>
+        <div class="example__image example__image--after">
+          <img src="https://via.placeholder.com/101x18.png" alt="После правильного питания">
+        </div>
+        <div class="example__toggle toggle">
+          <span class="toggle__label" tabindex="0">Было</span>
+          <div class="toggle__wrapper">
+            <span class="toggle__bar" tabindex="0"></span>
+          </div>
+          <span class="toggle__label toggle__label--after" tabindex="0">Стало</span>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <section class="contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="contacts__wrapper-text">
+        <span class="contacts__label">приглашаем<br> к сотрудничеству<br> дилеров!</span>
+        <span class="contacts__address">
+          ул. Большая<br> Конюшенная, д. 19/8<br>
+          <span class="contacts__city">Санкт-Петербург</span>
+        </span>
+      </div>
+      <div class="contacts__map">
+        <img src="https://via.placeholder.com/101x18.png" alt="">
+      </div>
+    </section>
+
+    <div class="footer__wrapper">
+      <div class="footer__wrapper-logo">
+        <a class="footer__logo logo">
+          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+        </a>
+      </div>
+      <div class="footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link " href="https://vk.com/htmlacademy" aria-label="Переход на сайт вконтакте">
+              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Вконтакте">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link" href="https://www.instagram.com/htmlacademy"
+              aria-label="Переход на сайт instagram">
+              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="instagram">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link" href="https://www.facebook.com/htmlacademy"
+              aria-label="Переход на сайт facebook">
+              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="facebook">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__copyright copyright">
+        <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">
+          <span>HTML Academy</span>
+          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт">
+        </a>
+      </div>
+    </div>
+  </footer>
+
+</body>
+
 </html>
