правки по разметке

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,8 @@
 
 </head>
 
-<body style="max-width: 320px; margin: 0 auto">
+<body>
+
   <header class="header">
     <div class="header__wrapper">
       <a class="header__logo logo">
@@ -26,6 +27,7 @@
       </nav>
     </div>
   </header>
+
   <main>
     <h1 class="visually-hidden">Магазин правильного питания для вашего любимца "Кэт Енерджи"</h1>
 
@@ -119,8 +121,9 @@
       </div>
     </section>
   </main>
+
   <footer class="footer">
-    <section class="contacts">
+    <div class="contacts">
       <h2 class="visually-hidden">Контакты</h2>
       <div class="contacts__wrapper-text">
         <span class="contacts__label">приглашаем<br> к сотрудничеству<br> дилеров!</span>
@@ -132,7 +135,7 @@
       <div class="contacts__map">
         <img src="https://via.placeholder.com/101x18.png" alt="">
       </div>
-    </section>
+    </div>
 
     <div class="footer__wrapper">
       <div class="footer__wrapper-logo">
