Разметка страницы Каталог и правки главной

--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,7 @@
 
     <section class="advantages">
       <h2 class="advantages__title">Как это работает</h2>
-      <ul class="advatages__list">
+      <ul class="advantages__list">
         <li class="advantages__item">
           <span class="advantages__icon advantages__icon--leaf"></span>
           <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
@@ -87,7 +87,7 @@
       </ul>
     </section>
     <section class="example">
-      <h2 class="example__title">Как это работает</h2>
+      <h2 class="example__title">Живой пример</h2>
       <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
         Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
         часов в день. </p>
@@ -147,19 +147,19 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link " href="https://vk.com/htmlacademy" aria-label="Переход на сайт вконтакте">
-              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Вконтакте">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="Вконтакте">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.instagram.com/htmlacademy"
               aria-label="Переход на сайт instagram">
-              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="instagram">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="instagram">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.facebook.com/htmlacademy"
               aria-label="Переход на сайт facebook">
-              <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="facebook">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="facebook">
             </a>
           </li>
         </ul>
@@ -167,7 +167,7 @@
       <div class="footer__copyright copyright">
         <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">
           <span>HTML Academy</span>
-          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт">
+          <img class="copyright__logo" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт">
         </a>
       </div>
     </div>
