--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,25 +2,30 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Кэт энерджи : Каталог</title>
 </head>
 
 <body style="max-width: 320px; margin: 0 auto">
-
   <header class="header">
     <div class="header__wrapper">
       <a class="header__logo logo" href="index.html">
-        <img class="logo__image" src="https://via.placeholder.com/33x38.png" alt="Логотип Кэт энерджи">
-        <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+        <img class="logo__image" src="https://via.placeholder.com/33x38.png" alt="Логотип Кэт энерджи" />
+        <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи" />
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Показать меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link">Каталог продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="programm.html">Подбор программы</a></li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -32,11 +37,11 @@
       <ul class="catalog__list">
         <li class="catalog__item">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 500 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 500 г" />
           </a>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy PRO 500 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy PRO 500 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -57,11 +62,11 @@
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 1000 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 1000 г" />
           </a>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy PRO 1000 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy PRO 1000 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -82,11 +87,11 @@
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 500 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 500 г" />
           </a>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy PRO 500 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy PRO 500 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -107,11 +112,11 @@
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 1000 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy PRO 1000 г" />
           </a>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy PRO 1000 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy PRO 1000 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -132,11 +137,11 @@
         </li>
         <li class="catalog__item">
           <a class="catalog__link" href="#">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 500 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 500 г" />
           </a>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy Slim 500 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy Slim 500 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -157,11 +162,11 @@
         </li>
         <li class="catalog__item">
           <div class="catalog__wrapper-image">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 1000 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 1000 г" />
           </div>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
-              <a href="#" class="catalog__item-link">Cat Energy Slim 1000 г</a>
+              <a class="catalog__item-link" href="#">Cat Energy Slim 1000 г</a>
             </h2>
             <table class="catalog__properties">
               <tr>
@@ -182,7 +187,7 @@
         </li>
         <li class="catalog__item">
           <div class="catalog__wrapper-image">
-            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 500 г">
+            <img class="catalog__image" src="https://via.placeholder.com/101x18.png" alt="Cat Energy Slim 500 г" />
           </div>
           <div class="catalog__description">
             <h2 class="catalog__item-title">
@@ -210,7 +215,7 @@
             <span class="catalog__icon-plus">+</span>
           </a>
           <h2 class="catalog__item-title catalog__item-title--more">
-            <a href="#" class="catalog__item-link">Показать еще 100500 товаров</a>
+            <a class="catalog__item-link" href="#">Показать еще 100500 товаров</a>
           </h2>
           <span class="catalog__text-more">На самом деле вкусов гораздо больше!</span>
           <a class="catalog__button-more button button--gray" href="#">Показать все</a>
@@ -227,7 +232,9 @@
             </h3>
             <table class="additional__properties">
               <tr>
-                <td class="additional__properties-name">1 Упаковка (100 г)</td>
+                <td class="additional__properties-name">
+                  1 Упаковка (100 г)
+                </td>
                 <td class="additional__properties-value">200 Р.</td>
               </tr>
             </table>
@@ -273,7 +280,9 @@
       </div>
       <div class="additional__action">
         <span class="additional__action-icon"></span>
-        <p class="additional__text">Закажите все и получите чехол для кота в подарок!</p>
+        <p class="additional__text">
+          Закажите все и получите чехол для кота в подарок!
+        </p>
       </div>
     </section>
   </main>
@@ -282,40 +291,43 @@
     <div class="contacts">
       <h2 class="visually-hidden">Контакты</h2>
       <div class="contacts__wrapper-text">
-        <span class="contacts__label">приглашаем<br> к сотрудничеству<br> дилеров!</span>
+        <span class="contacts__label">приглашаем<br />
+          к сотрудничеству<br />
+          дилеров!</span>
         <span class="contacts__address">
-          ул. Большая<br> Конюшенная, д. 19/8<br>
+          ул. Большая<br />
+          Конюшенная, д. 19/8<br />
           <span class="contacts__city">Санкт-Петербург</span>
         </span>
       </div>
       <div class="contacts__map">
-        <img src="https://via.placeholder.com/101x18.png" alt="">
+        <img src="https://via.placeholder.com/101x18.png" alt="" />
       </div>
     </div>
 
     <div class="footer__wrapper">
       <div class="footer__wrapper-logo">
-        <a class="footer__logo logo">
-          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+        <a class="footer__logo logo" href="index.html">
+          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи" />
         </a>
       </div>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link " href="https://vk.com/htmlacademy" aria-label="Переход на сайт вконтакте">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="Вконтакте">
+            <a class="social__link" href="https://vk.com/htmlacademy" aria-label="Переход на сайт вконтакте">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="Вконтакте" />
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.instagram.com/htmlacademy"
               aria-label="Переход на сайт instagram">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="instagram">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="instagram" />
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.facebook.com/htmlacademy"
               aria-label="Переход на сайт facebook">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="facebook">
+              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="facebook" />
             </a>
           </li>
         </ul>
@@ -323,13 +335,11 @@
       <div class="footer__copyright copyright">
         <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">
           <span>HTML Academy</span>
-          <img class="copyright__logo" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт">
+          <img class="copyright__logo" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт" />
         </a>
       </div>
     </div>
   </footer>
-
-
 </body>
 
 </html>
