--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         <ul class="main-nav__list">
           <li class="main-nav__item"><a class="main-nav__link">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="programm.html">Подбор программы</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программы</a></li>
         </ul>
       </nav>
     </div>
@@ -34,7 +34,7 @@
     <section class="cat-action">
       <h2 class="cat-action__title">Функциональное питание для котов</h2>
       <p class="cat-action__description">Занялся собой? Займись котом!</p>
-      <a class="cat-action__link" href="programm.html">Подобрать программу</a>
+      <a class="cat-action__link" href="form.html">Подобрать программу</a>
     </section>
 
     <section class="categories">
