--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,11 @@
 
   <title>Кэт энерджи</title>
 
+  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,13 +19,12 @@
   <header class="header">
     <div class="header__wrapper">
       <a class="header__logo logo">
-        <img class="logo__image" src="https://via.placeholder.com/33x38.png" alt="Логотип Кэт энерджи">
-        <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+        <img class="logo__image" src="img/logo-mobile.svg" alt="Логотип Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Показать меню</button>
+        <button class="main-nav__toggle" type="button" aria-label="Меню">Показать меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Главная</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программы</a></li>
         </ul>
@@ -32,27 +36,39 @@
     <h1 class="visually-hidden">Магазин правильного питания для вашего любимца "Кэт Енерджи"</h1>
 
     <section class="cat-action">
+      <div class="cat-action__background"></div>
       <h2 class="cat-action__title">Функциональное питание для котов</h2>
       <p class="cat-action__description">Занялся собой? Займись котом!</p>
-      <a class="cat-action__link" href="form.html">Подобрать программу</a>
+      <img class="cat-action__image" src="img/index-can-mobile@1x.png" alt="Правильное питание!!!">
+      <a class="cat-action__link button" href="form.html">Подобрать программу</a>
     </section>
 
     <section class="categories">
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="categories__list">
         <li class="categories__item">
-          <span class="categories__icon"></span>
-          <h3 class="categories__title">Похудение</h3>
+          <div class="categories__title-block">
+            <span class="categories__icon">
+              <img class="categories__icon-svg categories__icon-svg--slim" src="img/icon-cat-slim.svg" alt="Худой кот">
+            </span>
+            <h3 class="categories__title">Похудение</h3>
+          </div>
           <p class="categories__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="categories__link" href="catalog.html">
             <span class="categories__link-text">Каталог Slim</span>
-            <span class="categories__link-icon"></span>
+            <span class="categories__link-icon">
+            </span>
           </a>
         </li>
         <li class="categories__item">
-          <span class="categories__icon"></span>
-          <h3 class="categories__title">Набор Массы</h3>
+          <div class="categories__title-block">
+            <span class="categories__icon">
+              <img class="categories__icon-svg categories__icon-svg--pro" src="img/icon-cat-pro.svg"
+                alt="Накаченный кот">
+            </span>
+            <h3 class="categories__title">Набор Массы</h3>
+          </div>
           <p class="categories__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
             Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="categories__link" href="catalog.html">
@@ -60,7 +76,6 @@
             <span class="categories__link-icon"></span>
           </a>
         </li>
-        <li class="categories__item"></li>
       </ul>
     </section>
 
@@ -87,36 +102,39 @@
       </ul>
     </section>
     <section class="example">
-      <h2 class="example__title">Живой пример</h2>
-      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-        Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
-        часов в день. </p>
-      <div class="example__wrapper">
-        <ul class="example__info-list">
-          <li class="example__info-item">
-            <span class="example__info-value">5 кг</span>
-            <span class="example__info-label">снижение веса</span>
-          </li>
-          <li class="example__info-item">
-            <span class="example__info-value">60 дней</span>
-            <span class="example__info-label">затрачено времени</span>
-          </li>
-        </ul>
-        <p class="example__price">Затраты на питание:15 000 руб.</p>
-      </div>
-      <div class="example__wrapper example__wrapper--images">
-        <div class="example__image example__image--before">
-          <img src="https://via.placeholder.com/101x18.png" alt="Толстый кот">
+      <div class="example__container">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+          Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по
+          16
+          часов в день. </p>
+        <div class="example__wrapper">
+          <ul class="example__info-list">
+            <li class="example__info-item">
+              <span class="example__info-value">5 кг</span>
+              <span class="example__info-label">снижение веса</span>
+            </li>
+            <li class="example__info-item">
+              <span class="example__info-value">60 дней</span>
+              <span class="example__info-label">затрачено времени</span>
+            </li>
+          </ul>
+          <p class="example__price">Затраты на питание: 15 000 руб.</p>
         </div>
-        <div class="example__image example__image--after">
-          <img src="https://via.placeholder.com/101x18.png" alt="После правильного питания">
-        </div>
-        <div class="example__toggle toggle">
-          <span class="toggle__label" tabindex="0">Было</span>
-          <div class="toggle__wrapper">
-            <span class="toggle__bar" tabindex="0"></span>
+        <div class="example__wrapper example__wrapper--images">
+          <div class="example__image example__image--before">
+            <img src="img/before-mobile@1x.png" alt="Толстый кот">
           </div>
-          <span class="toggle__label toggle__label--after" tabindex="0">Стало</span>
+          <div class="example__image example__image--after">
+            <img src="img/after-mobile@1x.png" alt="После правильного питания">
+          </div>
+          <div class="example__toggle toggle">
+            <span class="toggle__label" tabindex="0">Было</span>
+            <div class="toggle__wrapper">
+              <span class="toggle__bar" tabindex="0"></span>
+            </div>
+            <span class="toggle__label toggle__label--after" tabindex="0">Стало</span>
+          </div>
         </div>
       </div>
     </section>
@@ -133,33 +151,33 @@
         </span>
       </div>
       <div class="contacts__map">
-        <img src="https://via.placeholder.com/101x18.png" alt="">
+        <span class="contacts__pin"></span>
       </div>
     </div>
 
     <div class="footer__wrapper">
       <div class="footer__wrapper-logo">
         <a class="footer__logo logo">
-          <img class="logo__name" src="https://via.placeholder.com/101x18.png" alt="Кэт энерджи">
+          <img class="logo__name" src="img/logo-footer.svg" alt="Кэт энерджи" width="132" height="23">
         </a>
       </div>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link " href="https://vk.com/htmlacademy" aria-label="Переход на сайт вконтакте">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="Вконтакте">
+              <img class="social__icon" src="img/icon-vk-mobile.svg" alt="Вконтакте" width="22" height="11">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.instagram.com/htmlacademy"
               aria-label="Переход на сайт instagram">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="instagram">
+              <img class="social__icon" src="img/icon-insta-mobile.svg" alt="instagram" width="16" height="16">
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link" href="https://www.facebook.com/htmlacademy"
               aria-label="Переход на сайт facebook">
-              <img class="social__icon" src="https://via.placeholder.com/101x18.png" alt="facebook">
+              <img class="social__icon" src="img/icon-fb-mobile.svg" alt="facebook" width="10" height="19">
             </a>
           </li>
         </ul>
@@ -167,7 +185,7 @@
       <div class="footer__copyright copyright">
         <a class="copyright__name" href="https://htmlacademy.ru/intensive/adaptive">
           <span>HTML Academy</span>
-          <img class="copyright__logo" src="https://via.placeholder.com/101x18.png" alt="Переход на сайт">
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Переход на сайт" width="27" height="34">
         </a>
       </div>
     </div>
